Fix form overlapping text title

--- a/src/components/LeadForm/styles.module.scss
+++ b/src/components/LeadForm/styles.module.scss
@@ -66,7 +66,7 @@
     }
 
     .terms {
-      margin: 24px 0 24px 0;
+      margin: 8px 0 24px 0;
       li {
         color: var(--gray70);
         font-style: normal;
