--- a/src/components/Sections/ListSection/styles.module.scss
+++ b/src/components/Sections/ListSection/styles.module.scss
@@ -3,6 +3,14 @@
 .mainSection {
   @include sectionContainer;  
 
+  @media (min-width: 768px) {
+    padding-top: 330px;
+  }
+
+  @media (min-width: 992px) {
+    padding-top: 370px;
+  }
+
   .primaryColor {
     color: var(--primary60);
     text-decoration: underline;
@@ -20,8 +28,10 @@
     
     @media (min-width: 576px) {
       font-size: 32px;
-      margin-top: 222px;
       margin-bottom: 24px;
+    }
+    @media (min-width: 768px) {
+      margin-top: 0;
     }
   }
 
@@ -60,7 +70,6 @@
     text-align: center;
   
     @media (min-width: 768px) {
-      margin-top: 222px;
       text-align: left;
     }
     .imageContent {
